--- a/server/cloudbuild.yaml
+++ b/server/cloudbuild.yaml
@@ -1,21 +1,21 @@
 steps:
 # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$GOOGLE_CLOUD_PROJECT/livewire-backend', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/bernard-websocket', '.']
   dir: 'server'
 
 # Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$GOOGLE_CLOUD_PROJECT/livewire-backend']
+  args: ['push', 'gcr.io/$PROJECT_ID/bernard-websocket']
 
 # Deploy container image to Cloud Run
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
   - 'run'
   - 'deploy'
-  - 'livewire-backend'
+  - 'bernard-websocket'
   - '--image'
-  - 'gcr.io/$GOOGLE_CLOUD_PROJECT/livewire-backend'
+  - 'gcr.io/$PROJECT_ID/bernard-websocket'
   - '--region'
   - 'us-central1'
   - '--platform'
@@ -24,9 +24,9 @@ steps:
   - '--port'
   - '8081'
   - '--set-env-vars'
-  - 'GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT},LOG_LEVEL=INFO'
+  - 'GOOGLE_CLOUD_PROJECT=$PROJECT_ID,LOG_LEVEL=INFO'
   - '--service-account'
-  - 'livewire-backend@${GOOGLE_CLOUD_PROJECT}.iam.gserviceaccount.com'
+  - 'bernard-websocket@$PROJECT_ID.iam.gserviceaccount.com'
 
 images:
-- 'gcr.io/$GOOGLE_CLOUD_PROJECT/livewire-backend' 
+- 'gcr.io/$PROJECT_ID/bernard-websocket' 
